# yew-router-example

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
src/: lib.rs
static/: index.html
