[package]
name = "yew-router-example"
version = "0.1.0"
authors = ["Jon Cahill <jon@zero41.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
yew = "0.17.2"
yew-router = "0.14.0"
wasm-bindgen = "0.2"
